Dynamic creation of table and endpoints for removing items was added
